# air_pollution_prediction

./: .gitignore  exploration.ipynb  pyproject.toml  weather_columns.json
src/: air_pollution_etl.py  main.py  utils.py  weather_downloader.py  weather_etl.py
