[project]
name = "air-pollution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.13.0",
    "openpyxl>=3.1.5",
    "pandas<=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "xgboost>=3.2.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'"
]
